# er

./: .gitmodules  README.md  pyproject.toml  run
.github/workflows/: pages.yml
src/: env.py  run.py
src/lib/: git.py
src/net/: env.py
src/net/dumps/: surge.py
src/rule/: dump.py  env.py  getrex.py  getvlc.py  load.py  remix.py  run.py
var/net/: base.yml  cn.yml
var/rule/: list.yml  r-jp.yml  r-world.yml
